--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,24 @@
 	}
 }
 
+@keyframes spin {
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes dash {
+	0% {
+		stroke-dashoffset: 50;
+	}
+	50% {
+		stroke-dashoffset: 0;
+	}
+	100% {
+		stroke-dashoffset: -50;
+	}
+}
+
 * {
 	font-family: Century Gothic;
 	font-weight: 500;
@@ -21,6 +39,19 @@
 body {
 	background: lightblue;
 	height: 150vh;
+}
+
+.overlay {
+	width: 100vw;
+	height: 100vh;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	backdrop-filter: blur(2px);
+	display: none;
 }
 
 .flex {
@@ -117,4 +148,21 @@ main {
 	box-shadow: 0px 0px 6px black inset, 0px 0px 6px black inset;
 	height: 45vh;
 	width: 15%;
+}
+
+.day-of-week {
+	text-align: center;
+}
+
+.spinner {
+	animation: spin 1.5s linear infinite;
+	width: 75px;
+	height: 75px;
+}
+
+.spinner-path {
+	stroke: #000;
+	stroke-dasharray: 50;
+	stroke-dashoffset: 0;
+	animation: dash 1.5s ease-in-out infinite;
 }
