--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+
 @keyframes text-glitch {
 	0% {
 		text-shadow: -2px 0px red, 2px 0px blue;
@@ -146,7 +148,7 @@ main {
 	background: rgba(255, 255, 255, 0.3);
 	border-radius: 20px;
 	box-shadow: 0px 0px 6px black inset, 0px 0px 6px black inset;
-	height: 45vh;
+	height: 45.5vh;
 	width: 15%;
 }
 
@@ -165,4 +167,34 @@ main {
 	stroke-dasharray: 50;
 	stroke-dashoffset: 0;
 	animation: dash 1.5s ease-in-out infinite;
+}
+
+.condition-icon {
+	width: 100px;
+	margin-left: 25%;
+}
+
+.weather-info-container {
+	display: flex;
+	margin-left: 6.5%;
+	align-items: center;
+}
+
+.info-icon {
+	width: 30px;
+}
+
+.weather-info {
+	margin-left: 7px;
+}
+
+.weather-date {
+	text-align: center;
+	margin-top: 14%;
+}
+
+.condition-icon-container {
+	margin-top: -3%;
+	margin-bottom: 4%;
+	width: 100%;
 }
