--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @keyframes text-glitch {
 	0% {
@@ -34,7 +35,7 @@
 }
 
 * {
-	font-family: Century Gothic;
+	font-family: "Century Gothic", Quicksand;
 	font-weight: 500;
 }
 
@@ -73,6 +74,7 @@ body {
 	line-height: 1;
 	justify-content: space-between;
 	color: white;
+	z-index: 1;
 }
 
 .main-heading {
@@ -102,13 +104,10 @@ label[for="city-input"] {
 	height: 25px;
 	font-family: Comic Sans MS;
 	font-size: 16px;
-	border: 2.5px solid blue;
+	border: none;
 	border-radius: 15px;
-	padding: 3px;
-}
-
-#city-input:hover {
-	border: 2.5px solid yellow;
+	padding: 5px;
+	outline: none;
 }
 
 #search-icon {
@@ -149,7 +148,6 @@ main {
 	border-radius: 20px;
 	box-shadow: 0px 0px 6px black inset, 0px 0px 6px black inset;
 	height: 45.5vh;
-	width: 15%;
 }
 
 .day-of-week {
@@ -201,4 +199,15 @@ main {
 	margin-top: -3%;
 	margin-bottom: 4%;
 	width: 100%;
+}
+
+#attribution {
+	border-radius: 20px;
+	box-shadow: 0px 0px 15px darkblue inset;
+	padding: 20px;
+	margin-top: 10vh;
+}
+
+a:visited {
+	color: #0000ee;
 }
