--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ main {
 	background: rgba(255, 255, 255, 0.3);
 	border-radius: 20px;
 	box-shadow: 0px 0px 6px black inset, 0px 0px 6px black inset;
-	height: 45.5vh;
+	height: 305px;
 }
 
 .day-of-week {
